--- a/css/styles.css
+++ b/css/styles.css
@@ -108,12 +108,12 @@ a.menu-item {
 .main-portada {
   background-image: url(../assets/Fondos/fondo-geometrico-abstracto-premium-negro-oro_1017-24783.webp);
   background-size: 100%;
-  background-position: bottom;
+  background-position: center;
+  padding: 20px;
   background-repeat: repeat-y;
   display: flex;
   justify-content: center;
-  align-items: center;
-  height: 100vh; }
+  align-items: center; }
 
 .div-portada {
   height: 560px;
@@ -139,7 +139,8 @@ footer {
 .quienes-somos {
   background-image: url(../assets/Fondos/fondo-geometrico-abstracto-premium-negro-oro_1017-24783.webp);
   background-size: 100%;
-  background-position: bottom;
+  background-position: center;
+  padding: 20px;
   color: #f7d547;
   text-transform: uppercase; }
 
@@ -162,36 +163,37 @@ footer {
 .main-productos {
   background-image: url(../assets/Fondos/fondo-geometrico-abstracto-premium-negro-oro_1017-24783.webp);
   background-size: 100%;
-  background-position: bottom;
-  height: 100vh; }
-
-button a {
-  text-decoration: none; }
-
-.button {
-  background-color: #f7d547;
-  width: 200px;
-  height: 100px;
-  border-radius: 99px 99px 99px 99px;
-  -webkit-border-radius: 99px 99px 99px 99px;
-  -moz-border-radius: 99px 99px 99px 99px; }
+  background-position: center;
+  padding: 20px; }
 
 .div-button {
   display: flex;
-  justify-content: center;
-  padding-top: 20%; }
+  flex-direction: column;
+  align-items: center;
+  height: 100vh;
+  gap: 20px;
+  padding-top: 30px; }
+  .div-button .button {
+    background-color: #f7d547;
+    width: 200px;
+    height: 100px;
+    border-radius: 99px 99px 99px 99px;
+    -webkit-border-radius: 99px 99px 99px 99px;
+    -moz-border-radius: 99px 99px 99px 99px; }
+    .div-button .button a {
+      text-decoration: none; }
 
 .main-servicios {
   background-image: url(../assets/Fondos/fondo-geometrico-abstracto-premium-negro-oro_1017-24783.webp);
   background-size: 100%;
-  background-position: bottom;
+  background-position: center;
+  padding: 20px;
   background-repeat: repeat-y;
   color: #f7d547;
   text-align: center;
   display: flex;
   justify-content: center;
-  align-items: center;
-  height: 100vh; }
+  align-items: center; }
   .main-servicios .div-servicios {
     height: 629px;
     width: 560px;
@@ -204,8 +206,8 @@ button a {
 .main-contacto {
   background-image: url(../assets/Fondos/fondo-geometrico-abstracto-premium-negro-oro_1017-24783.webp);
   background-size: 100%;
-  background-position: bottom;
-  height: 100vh; }
+  background-position: center;
+  padding: 20px; }
 
 .formulario {
   padding-top: 30px;
@@ -280,8 +282,8 @@ button a {
   footer {
     font-size: 20px; }
   .main-quienes video {
-    width: 250px;
-    margin-top: 100px; } }
+    width: 320px;
+    margin-top: 20px; } }
 
 @media (max-width: 320px) and (min-width: 0px) {
   header {
