--- a/scss/layout/main-pages/_main-productos.scss
+++ b/scss/layout/main-pages/_main-productos.scss
@@ -2,23 +2,26 @@ $background-color_1: #f7d547;
 
 .main-productos {
 	@include background;
-	height: 100vh;
-}
-button {
-	a {
-		text-decoration: none;
-	}
-}
-.button {
-	background-color: $background-color_1;
-	width: 200px;
-	height: 100px;
-	border-radius: 99px 99px 99px 99px;
-	-webkit-border-radius: 99px 99px 99px 99px;
-	-moz-border-radius: 99px 99px 99px 99px;
 }
 .div-button {
 	display: flex;
-	justify-content: center;
-	padding-top: 20%;
+	flex-direction: column;
+	align-items: center;
+	height: 100vh;
+	gap: 20px;
+	padding-top: 30px;
+
+	.button {
+		background-color: $background-color_1;
+		width: 200px;
+		height: 100px;
+		border-radius: 99px 99px 99px 99px;
+		-webkit-border-radius: 99px 99px 99px 99px;
+		-moz-border-radius: 99px 99px 99px 99px;
+		
+
+		a {
+			text-decoration: none;
+		}
+	}
 }
